# design-mode

src/: CMakeLists.txt  main.cpp
src/AbstractFactory/: CMakeLists.txt  abstractfactory.h
src/Builder/: builder.h
src/Decorator/: CMakeLists.txt  decorator.h
src/Facade/: CMakeLists.txt  facade.h
src/FactoryMethod/: CMakeLists.txt  factorymethod.h
src/Observer/: observer.h
src/Prototype/: CMakeLists.txt  prototype.h
src/Proxy/: CMakeLists.txt  proxy.h
src/SimpleFactoryPattern/: CMakeLists.txt  simplefactorypattern.cpp  simplefactorypattern.h
src/Strategy/: CMakeLists.txt  strategy.h
src/TemplateMethod/: CMakeLists.txt  templatemethod.h
src/base/: CMakeLists.txt  binder.h  function.h
